<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_model_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model_name"
                android:textColorHint="@color/gray_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/year_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_model_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:inputType="number"
                android:textColorHint="@color/gray_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/capacity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_model_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/capacity_cm"
                android:inputType="number"
                android:textColorHint="@color/gray_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/co2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_model_co2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/co_factor_g_km"
                android:inputType="numberDecimal"
                android:textColorHint="@color/gray_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_model_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_kg"
                android:inputType="numberDecimal"
                android:textColorHint="@color/gray_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/length_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_model_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/length_cm"
                android:inputType="numberDecimal"
                android:textColorHint="@color/gray_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/height_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_model_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_cm"
                android:inputType="numberDecimal"
                android:textColorHint="@color/gray_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/width_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_model_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/width_cm"
                android:inputType="numberDecimal"
                android:textColorHint="@color/gray_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fuel_capacity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_fuel_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fuel_capacity"
                android:inputType="numberDecimal"
                android:textColorHint="@color/gray_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_type"
            android:layout_marginBottom="4dp"/>
        <Spinner
            android:id="@+id/spinner_fuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/button_submit_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_model"/>

    </LinearLayout>
</ScrollView> 